2007-01-27  Doug Hellmann  <dhellmann@racemi.com>

	* models.py (Podcast.get_monitor_url): Pull the logic for building
	the monitoring URL out fo as_dict.

	* templates/subscriptions.opml: Use our own monitoring feed for
	the xmlUrl value, instead of linking directly back to the original
	feed.

	* views.py (subscriptions): Add url_prefix to the context
	information so the template can use it to build up the URL.

	* models.py (Podcast.Admin): Show the users who are subscribed to
	the feed.

2007-01-22  Doug Hellmann  <dhellmann@racemi.com>

	* templates/user.html: Use the feed.png that matches the other
	icons.

	* models.py (Podcast.as_dict): Include the monitor_url in the
	response.

	* views.py (_do_add_to_queue): New function to avoid repeating the
	add-to-queue code.
	(queue): Call _do_add_to_queue.
	(add_to_queue): New view method to add an item to the queue then
	show the user page with the full queue.

	* urls.py (urlpatterns): Organize different URLs into separate
	lists.  Add URL pattern for monitor feeds.

	* feeds.py (ProxyFeed): Class to produce the feed with links for
	adding items to a queue directly.
	(ProxyFeedArgs): Since the ProxyFeed uses multiple arguments, we
	need a class to keep up with both values.

2007-01-07  Doug Hellmann  <dhellmann@racemi.com>

	* templates/user.html: Move the add_feed form below the list of
	subscriptions.

2006-12-17  Doug Hellmann  <dhellmann@racemi.com>

	* util.py (convert_feed_to_entries): Only process keys that exist.

	* views.py (change_subscriptions): Use the feedfinder module to
	try to ensure that the url being added points to a feed.
	(change_subscriptions): If feedfinder.py doesn't think the URL
	points to a feed, assume the user knows better and try to use it
	anyway.

	* templates/user.html: Fix the title of the alternate link.

	* urls.py (feeds): Take out the Atom feed.

	* feeds.py (UniqueGUIDRSSFeed.add_item): Switch the unique_id if
	it refers to the link because some sites (Barnes and Noble) use